feat: add categories route + swagger docs
