# src/routers/categories.js
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { listStoryCategoriesController } from '../controllers/categories.js';
+
+export const categoriesRouter = Router();
+
+categoriesRouter.get('/stories', listStoryCategoriesController);
+
+export default categoriesRouter;
